--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-config-next": "13.4.7",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
-    "next": "13.4.7",
+    "next": "^15.0.2",
     "nodemailer": "^6.9.3",
     "postcss": "8.4.24",
     "react": "18.2.0",
