--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,5 @@
-MONGO_URI=mongodb+srv://hitesh:subscribe@cluster0.nwxsjhi.mongodb.net/
-TOKEN_SECRET=nextjsyoutube
-DOMAIN=http://localhost:3000
+MONGO_URL = 
+TOKEN_SECRET =nextjsyoutube
+DOMAIN = http://localhost:3000
+NODEMAILER_USER = "
+NODEMAILER_PASS = 
